[package]
name = "mspacmab-rs"
version = "0.1.0"
authors = ["Sebastien Bechet <sebastien.bechet@osinix.com>"]
license = "GPL-3.0+"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[features]
# graphics-simulator compilation
simulator = []
default = ["simulator"]

[dependencies]
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
embedded-graphics = "^0.6"
embedded-graphics-simulator = "^0.2"
sdl2 = "^0.32"
